Fixed torus knot ao map not set

--- a/cube-vertex.html
+++ b/cube-vertex.html
@@ -93,6 +93,9 @@
     cube.material.aoMap = ssaoPass.blurRenderTarget.texture
     cube.material.needsUpdate = true
 
+    torusKnot.material.aoMap = ssaoPass.blurRenderTarget.texture
+    torusKnot.material.needsUpdate = true
+
     // Init gui
     var gui = new dat.GUI();
 
